package generics.comparators;

public interface MyComparator<T> {

    int compare(T o1, T o2);

}
