package generics.student;

public enum Subject {
    FUNDAMENTALS_OF_ELECTRICAL_ENGINEERING,
    MANAGEMENT_IN_ENGINEERING,
    MATHEMATICAL_ANALYSIS_2,
    OBJECT_ORIENTED_PROGRAMMING,
    PHYSICAL_EDUCATION_AND_WELFARE_2,
    PHYSICS,
}
