package generics.tester;

public interface Tester<T> {

    boolean test(T o);

}
